= Change Log

Below is a complete listing of changes for each revision of FasterCSV.

== 0.2.2

* Fix FasterCSV.rewind() to reset the FasterCSV.lineno() counter.
* Fix FasterCSV.rewind() to reset the header processing.

== 0.2.1

* Removed autorequire from GemSpec.
* Made Rakefile VERSION aware.
* General Rakefile cleanup.

== 0.2.0

* Added VERSION constant.
* Significantly improved test speed.
* Worked around Date::parse() bug so tests will pass on Windows.
* Documented test procedure.
* Made FasterCSV.lineno() CSV aware.
* Added line numbers to MalformedCSVError messages.
* <tt>:headers</tt> can now be set to an Array of headers to use.
* <tt>:headers</tt> can now be set to an external CSV String of headers to use.
* Added an <tt>:unconverted_fields</tt> options, so those can be returned
  when needed.
* Provided support for the serialization of custom Ruby objects using CSV.
* Added CSV drop-in interface.
* Added header information to FieldInfo Struct for conversions by header.
* Added an alias to support <tt>require "fastercsv"</tt>.
* Added FCSV alias for FasterCSV.
* Added FasterCSV::instance() and FasterCSV()/FCSV() shortcuts for easy output.

== 0.1.9

* Fixing the require "English" bug.

== 0.1.8

* Converted FasterCSV.filter() to use ARGF for input.
* Made FasterCSV.<<() aware of FasterCSV::Row objects.
* Switched header rows to include the unconverted headers as fields.
* Rescued IOError when trying to auto detect a line-ending on an output stream
  and used the default system line-ending.
* Added FasterCSV::Row.header_row?() and FasterCSV::Row.field_row?().

== 0.1.6

* Began using a forked development/stable versioning system.
* Reorganized initialization code for easier additions and maintenance.
* Added a check for unknown options.  Exceptions will now be thrown for them.
* Added built-in and custom data converters.  Built-in handle numbers and dates.
* Added Array#to_csv and String#parse_csv.  Both accept normal options.